feat: create initial HTML structure and layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="th">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sentence Flip - เรียนภาษาอังกฤษ A1</title>
+    
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="card.css">
+</head>
+<body>
 
+    <div class="container">
+        <h1>Sentence Flip 🇬🇧</h1>
+        <p>คลิกที่การ์ดเพื่อดูคำแปล</p>
+
+        <div class="card" id="flashcard">
+            <div class="card-inner">
+                <div class="card-front">
+                    <p id="english-text">Loading...</p>
+                </div>
+                <div class="card-back">
+                    <p id="thai-text">กำลังโหลด...</p>
+                </div>
+            </div>
+        </div>
+
+        <button id="next-btn" class="btn">ประโยคถัดไป ➔</button>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
